--- a/style.css
+++ b/style.css
@@ -103,3 +103,24 @@ nav button:hover {
     border-radius: 6px;
     border: 1px solid #A22C29;
 }
+.hero {
+    background: linear-gradient(
+        rgba(0,0,0,0.6),
+        rgba(0,0,0,0.8)
+    ),
+    #902923;
+    padding: 100px 20px;
+}
+
+.hero h1 {
+    font-size: 3em;
+}
+
+.hero button {
+    margin-top: 20px;
+    padding: 12px 20px;
+    border: none;
+    background-color: #A22C29;
+    color: white;
+    cursor: pointer;
+}
