--- a/style.css
+++ b/style.css
@@ -413,3 +413,8 @@ nav button:hover {
   padding: 60px 80px;
   box-sizing: border-box;
 }
+.content {
+  min-height: calc(100vh - 220px);
+  padding: 60px 80px;
+  box-sizing: border-box;
+}
